Optimizations and bug fixes in the Java engine. Also a major overhaul of the Spriteset class, in order to make it work in a map creator program coming soon\!